[project]
name = ""
version = ""
description = ""
authors = [
    {name = "昊色居士", email = "xhrtxh@gmail.com"},
]
dependencies = [
    "httpx>=0.23.0",
    "loguru>=0.6.0",
    "tenacity>=8.0.1",
    "aiofiles>=0.8.0",
    "alive-progress>=2.4.1",
    "rich>=12.5.1",
    "fire>=0.4.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
